class User {
    String userName;
    String password;

    User(String userName, String password) {
        this.userName = userName;
        this.password = password;
    }
}

