@startuml
'https://plantuml.com/class-diagram

 class Game {
 HashMap<String, String> users
  HashMap<String, List<Character>> userCharacters
 logIn()
 manageCharacters()
 playGame()
 createCharacter()
 displayCharacters()
 loadData()
 }
class User {
String userName
String password
}
class Character {
String nameOfCharacter
Map<Integer, Ability> abilities
isAbilityReady()
useAbility()
}
class Ability {
String name
long cooldown
long lastUsedTime
isReady()
use()
}

Game<|-- User
Character <|-- Ability
User <|-- Character


@enduml